src/corelib/tools/qelapsedtimer_generic.cpp
@@ -150,8 +150,8 @@ qint64 QElapsedTimer::msecsSinceReference() const
 /*!
     Returns the number of milliseconds between this QElapsedTimer and \a
     other. If \a other was started before this object, the returned value
-    will be positive. If it was started later, the returned value will be
-    negative.
+    will be negative. If it was started later, the returned value will be
+    positive.
 
     The return value is undefined if this object or \a other were invalidated.
 
@@ -166,7 +166,7 @@ qint64 QElapsedTimer::msecsTo(const QElapsedTimer &other) const
 /*!
     Returns the number of seconds between this QElapsedTimer and \a other. If
     \a other was started before this object, the returned value will be
-    positive. If it was started later, the returned value will be negative.
+    negative. If it was started later, the returned value will be positive.
 
     The return value is undefined if this object or \a other were invalidated.
 
